unimplemented_tests/sad_undeclared_variable.msh
// error: line 11: Undeclared variable 'f'
DECLR
	x: int;
	a: int;
	b: int;
	c: int;
BEGIN
	a := 2;
	b := 4;
	c := -8;
	x := a * -c + f * -c;
	print x;
	print c;
END
